uzduociu pakeitimai pirma savaite

--- a/01_programming_basics/0103lt_kintamieji.ipynb
+++ b/01_programming_basics/0103lt_kintamieji.ipynb
@@ -47,10 +47,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "star = 5\n",
+    "print(star)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -218,10 +229,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023 12 18\n"
+     ]
+    }
+   ],
+   "source": [
+    "year = 2023\n",
+    "month = 12\n",
+    "day = 18\n",
+    "print(year, month, day)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -291,10 +315,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "number1 = 13\n",
+    "number2 = 7\n",
+    "number1 = number2\n",
+    "print(number1, number2)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -407,10 +444,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17 55.3 1.62\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = 17\n",
+    "weight = 55.3\n",
+    "height = 1.62\n",
+    "print(age, weight, height)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -432,9 +482,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n"
+     ]
+    }
+   ],
    "source": [
     "age = 25\n",
     "print(type(age))        # Išspausdina: <class 'int'>"
@@ -442,9 +500,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n"
+     ]
+    }
+   ],
    "source": [
     "weight = 64.5\n",
     "print(type(weight))     # Išspausdina: <class 'float'>"
@@ -452,9 +518,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
    "source": [
     "first_name = \"John\"\n",
     "print(type(first_name))       # Išspausdina: <class 'str'>"
@@ -462,9 +536,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'bool'>\n"
+     ]
+    }
+   ],
    "source": [
     "is_student = True\n",
     "print(type(is_student)) # Išspausdina: <class 'bool'>"
@@ -486,9 +568,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "str\n",
+      "bool\n"
+     ]
+    }
+   ],
    "source": [
     "print(type(first_name).__name__)\n",
     "print(type(is_student).__name__)"
@@ -506,10 +597,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int\n",
+      "float\n",
+      "float\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(age).__name__)\n",
+    "print(type(weight).__name__)\n",
+    "print(type(height).__name__)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -536,9 +641,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25 77\n"
+     ]
+    }
+   ],
    "source": [
     "age = 25\n",
     "Age = 77\n",
@@ -592,9 +705,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "str = \"some funny text\"\n",
     "print(type(str) == str)"
@@ -632,10 +753,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "350\n"
+     ]
+    }
+   ],
+   "source": [
+    "book_page = 350\n",
+    "print(book_page)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -646,10 +778,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "385\n"
+     ]
+    }
+   ],
+   "source": [
+    "page = -35\n",
+    "book_page = book_page - page\n",
+    "print(book_page)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -660,10 +804,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "387.75\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = 2.75\n",
+    "book_page = book_page + number\n",
+    "print(book_page)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -674,10 +830,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n",
+      "<class 'int'>\n",
+      "<class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(book_page))\n",
+    "print(type(page))\n",
+    "print(type(number))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -713,7 +883,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.1"
   },
   "orig_nbformat": 4
  },
