--- a/01_programming_basics/0105lt_salygos_operatoriai.ipynb
+++ b/01_programming_basics/0105lt_salygos_operatoriai.ipynb
@@ -139,10 +139,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "71 tinkamas\n",
+      "42 per senas\n",
+      "15 per jaunas\n"
+     ]
+    }
+   ],
+   "source": [
+    "amziusI = 71\n",
+    "if amziusI < 25:\n",
+    "    print(\"per jaunas\") \n",
+    "elif amziusI >= 71: \n",
+    "    print(amziusI, \"tinkamas\")\n",
+    "else:\n",
+    "    print(amziusI, \"per senas\")  \n",
+    "\n",
+    "amziusII = 42\n",
+    "if amziusII < 38:\n",
+    "    print(\"per jaunas\") \n",
+    "elif amziusII >= 63: \n",
+    "    print(amziusII, \"tinkamas\")\n",
+    "else:\n",
+    "    print(amziusII, \"per senas\")     \n",
+    "\n",
+    "amziusIII = 15\n",
+    "if amziusIII < 18:\n",
+    "    print(amziusIII, \"per jaunas\") \n",
+    "elif amziusIII >= 13: \n",
+    "    print(amziusIII, \"tinkamas\")\n",
+    "else:\n",
+    "    print(amziusIII, \"per senas\")    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tinkamas\n"
+     ]
+    }
+   ],
+   "source": [
+    "if amziusI >= 25 and amzius < 71:\n",
+    "    print(\"tinkamas\")\n",
+    "else:    \n",
+    "    print(\"per senas\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "per jaunas\n"
+     ]
+    }
+   ],
+   "source": [
+    "if amziusII <= 42 and amzius >21:\n",
+    "    print (\"tinkamas\")\n",
+    "else:\n",
+    "    print(\"per jaunas\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "per senas\n"
+     ]
+    }
+   ],
+   "source": [
+    "if amziusIII <= 13 and amzius > 18:\n",
+    "    print (\"tinkamas\")\n",
+    "else:\n",
+    "    print (\"per senas\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -155,10 +249,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nelygus\n"
+     ]
+    }
+   ],
+   "source": [
+    "skaicius1 = 6\n",
+    "skaicius2 = 3\n",
+    "if skaicius1 == skaicius2:\n",
+    "    print(\"lygus\")\n",
+    "else:\n",
+    "    print(\"nelygus\")    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "saicius1 lygus skaicius2\n"
+     ]
+    }
+   ],
+   "source": [
+    "skaicius1 = 7\n",
+    "skaicius2 = 7\n",
+    "if skaicius1 == skaicius2:\n",
+    "    print(\"saicius1 lygus skaicius2\")\n",
+    "else:\n",
+    "    print(\"skaicius1 nelygus skaicius2\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -171,10 +302,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 nelyginis\n"
+     ]
+    }
+   ],
+   "source": [
+    "skaicius = 7\n",
+    "if skaicius % 2 == 0:\n",
+    "    print(skaicius, \"lyginis\")\n",
+    "else:\n",
+    "    print(skaicius, \"nelyginis\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18 lyginis\n"
+     ]
+    }
+   ],
+   "source": [
+    "skaicius1 = 18\n",
+    "if skaicius1 % 2 == 0:\n",
+    "    print(skaicius1, \"lyginis\")\n",
+    "else:\n",
+    "    print(skaicius1, \"nelyginis\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -196,9 +362,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "<class 'bool'>\n"
+     ]
+    }
+   ],
    "source": [
     "lietus_lyja = True\n",
     "print(lietus_lyja)\n",
@@ -207,9 +382,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False <class 'bool'>\n"
+     ]
+    }
+   ],
    "source": [
     "lietus_baigesi = False\n",
     "print(lietus_baigesi, type(lietus_baigesi))"
@@ -224,9 +407,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "amzius = 25\n",
     "ar_pilnametis = amzius >= 18\n",
@@ -255,10 +446,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13 teigiamas\n"
+     ]
+    }
+   ],
+   "source": [
+    "skaicius1 = 13\n",
+    "if skaicius1 >= 0:\n",
+    "    print(skaicius1, \"teigiamas\")\n",
+    "else:\n",
+    "    print(skaicius1, \"neigiamas\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-6 neigiamas\n"
+     ]
+    }
+   ],
+   "source": [
+    "skaicius2 = -6\n",
+    "if skaicius2 >= 0:\n",
+    "    print(skaicius2, \"teigiamas\")\n",
+    "else:\n",
+    "    print(skaicius2, \"neigiamas\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 teigiamas\n"
+     ]
+    }
+   ],
+   "source": [
+    "skaicius3 = 0\n",
+    "if skaicius3 >= 0:\n",
+    "    print(skaicius3, \"teigiamas\")\n",
+    "else: \n",
+    "    print(skaicius3, \"neigiamas\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -302,9 +549,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "47 yra darbingas amžius\n"
+     ]
+    }
+   ],
    "source": [
     "amzius = 47\n",
     "darbingas = amzius >= 18 and amzius < 65\n",
@@ -325,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -580,10 +836,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 -3 abu nelyginis\n"
+     ]
+    }
+   ],
+   "source": [
+    "number1 = 5\n",
+    "number2 = -3\n",
+    "if number1 and number2 % 2 == 0:\n",
+    "    print(number1,number2, \"abu lyginiai\")\n",
+    "else:\n",
+    "    print(number1,number2, \"abu nelyginis\")\n",
+    "\n",
+    "    \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -821,10 +1094,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True oras_sandarus\n"
+     ]
+    }
+   ],
+   "source": [
+    "duris1_uzdarytos = True\n",
+    "duris2_uzdarytos = False\n",
+    "oras_sandarus = duris1_uzdarytos ^ duris2_uzdarytos\n",
+    "print(oras_sandarus, \"oras_sandarus\" )"
+   ]
   },
   {
    "cell_type": "code",
@@ -1328,10 +1614,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 yra tarp 8 ir 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "number1 = 6\n",
+    "number2 = 8\n",
+    "number3 = 3\n",
+    "if number2 < number1 < number3 or number2 > number1 > number3:\n",
+    "    print(number1, \"yra tarp\", number2, \"ir\", number3)\n",
+    "else:\n",
+    "    print(number1, \"nera tarp\", number2, \"ir\", number3)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1344,10 +1646,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nera keliamieji\n"
+     ]
+    }
+   ],
+   "source": [
+    "metai = 2050\n",
+    "if metai % 4 == 0 and metai % 100 != 0 or metai % 400 == 0:\n",
+    "    print(\"keliamieji\")\n",
+    "else:\n",
+    "    print(\"nera keliamieji\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1451,7 +1767,7 @@
     "        print('bet lyja')"
    ]
   },
-    {
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
