--- a/01_programming_basics/0106lt_tekstinės_eilutės.ipynb
+++ b/01_programming_basics/0106lt_tekstinės_eilutės.ipynb
@@ -54,10 +54,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "as mokausi programuoti su python\n"
+     ]
+    }
+   ],
+   "source": [
+    "rezultatas = \"as mokausi programuoti su python\"\n",
+    "print(rezultatas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "as mokausi programuoti Python programavimo kalba\n"
+     ]
+    }
+   ],
+   "source": [
+    "rezultatas1 = \"as mokausi programuoti\"\n",
+    "rezultatas2 = \"Python programavimo kalba\"\n",
+    "print(rezultatas1, rezultatas2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -107,10 +137,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "g\n"
+     ]
+    }
+   ],
+   "source": [
+    "zodis = \"programavimas\"\n",
+    "print(zodis[3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e\n"
+     ]
+    }
+   ],
+   "source": [
+    "rezultatas = \"smile\"\n",
+    "print(rezultatas[-1])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -163,10 +222,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "onist\n"
+     ]
+    }
+   ],
+   "source": [
+    "zodis = \"Pythonista\"\n",
+    "print(zodis[4:9])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wolf\n",
+      "wild \n"
+     ]
+    }
+   ],
+   "source": [
+    "zodis = \"wild wolf\"\n",
+    "print(zodis[5:9])\n",
+    "print(zodis[0:5])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -213,10 +303,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "rezultatas = \"Jupyter Notebook\"\n",
+    "print(len(rezultatas))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "eilute = \"sauleta diena\"\n",
+    "print(len(eilute))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -229,10 +348,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36\n"
+     ]
+    }
+   ],
+   "source": [
+    "ilgis = \"Kraftfahrzeughaftpflichtversicherung\"\n",
+    "print(len(ilgis))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -273,6 +403,60 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sauleta\n",
+      "diena!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Sauleta\\ndiena!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "grazus\n",
+      "oras\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"grazus\\noras\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "greitas\n",
+      "tempas\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"greitas\\ntempas\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -296,6 +480,27 @@
    ],
    "source": [
     "print(\"Sveikas\\tPasauli!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\tage\n",
+      "25\tday\n",
+      "25\tsteps\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"25\\tage\")\n",
+    "print(\"25\\tday\")\n",
+    "print(\"25\\tsteps\")"
    ]
   },
   {
@@ -331,6 +536,29 @@
     "\n",
     "# Patvirtinimo nykštukas emoji\n",
     "print(\"\\U0001F44D\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "💔\n",
+      "🫶\n",
+      "💓\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\U0001F494\")\n",
+    "\n",
+    "print(\"\\U0001FAF6\")\n",
+    "\n",
+    "print(\"\\U0001F493\")"
    ]
   },
   {
@@ -379,10 +607,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Viktorija\tSot-Peckovska\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Viktorija\\tSot-Peckovska\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -395,10 +633,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "💗\n",
+      "💔\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\U0001F497\")\n",
+    "\n",
+    "print(\"\\U0001F494\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -411,10 +662,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ji pasake kad \\Python nuostabi kalba\\\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Ji pasake kad \\\\Python nuostabi kalba\\\\\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -510,10 +771,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eilės, eilės, eilės, eilės\n",
+      "kiek jų daug ir įvairių.\n",
+      "sutelpa kančia ir meilė,\n",
+      "tarp juokingų ir jautrių.\n",
+      "\n",
+      "Eilės, Eilės, Eilės, Eilės\n",
+      "Kiek Jų Daug Ir Įvairių.\n",
+      "Sutelpa Kančia Ir Meilė,\n",
+      "Tarp Juokingų Ir Jautrių.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "tekstas = \"\"\"eilės, eilės, eilės, eilės\n",
+    "kiek jų daug ir įvairių.\n",
+    "Sutelpa kančia ir meilė,\n",
+    "tarp juokingų ir jautrių.\n",
+    "\"\"\"\n",
+    "print(tekstas.capitalize())\n",
+    "print(tekstas.title())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -521,18 +807,43 @@
    "source": [
     "### Greita užduotis 10\n",
     "\n",
-    "Pataisykite eilutę `the UNIVERSE is a SIMULATION` kad ji taptų įprasta sakinio forma, tada tinkama pavadinimo forma, ir atspausdinkite rezultatus.\n\n",
+    "Pataisykite eilutę `the UNIVERSE is a SIMULATION` kad ji taptų įprasta sakinio forma, tada tinkama pavadinimo forma, ir atspausdinkite rezultatus.\n",
+    "\n",
     "Pirmiausiai pakeiskite eilutės didžiąsias raides mažosiomis: `the universe is a simulation`.\n",
-    "Tada pakeiskite šios eilutės pirmąsias raides didžiosiomis: `The Universe Is A Simulation`.\n\n",
+    "Tada pakeiskite šios eilutės pirmąsias raides didžiosiomis: `The Universe Is A Simulation`.\n",
+    "\n",
     "Galiausiai, atspausdinkite gautus rezultatus."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the universe is a simulation\n",
+      "The Universe, Is A Simulation\n",
+      "The universe, is a simulation\n",
+      "THE UNIVERSE, IS A SIMULATION\n"
+     ]
+    }
+   ],
+   "source": [
+    "rezultatas = \"the UNIVERSE is a SIMULATION\"\n",
+    "print(rezultatas.lower())\n",
+    "\n",
+    "rezultatas = \"the universe, is a simulation\"\n",
+    "print(rezultatas.title())\n",
+    "\n",
+    "rezultatas = \"the universe, is a simulation\"\n",
+    "print(rezultatas.capitalize())\n",
+    "\n",
+    "rezultatas = \"the universe, is a simulation\"\n",
+    "print(rezultatas.upper())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -576,10 +887,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "sakinys = \"Hello world!\"\n",
+    "print(sakinys.startswith(\"Hi\")) #false\n",
+    "print(sakinys.endswith(\"!\")) #true\n",
+    "print(sakinys.startswith(\"Hello\"))  #true\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -587,7 +913,9 @@
    "source": [
     "### `find()` ir `rfind()`\n",
     "\n",
-    "`find()` grąžina pirmos pasikartojančios poeilutės \"substring\" indeksą, jei \"substring\" nerastas, tai grąžina -1.\n\n `rfind()` pradeda paiešką nuo eilutės pabaigos"
+    "`find()` grąžina pirmos pasikartojančios poeilutės \"substring\" indeksą, jei \"substring\" nerastas, tai grąžina -1.\n",
+    "\n",
+    " `rfind()` pradeda paiešką nuo eilutės pabaigos"
    ]
   },
   {
@@ -621,10 +949,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "sakinys = \"Data is the new oil. Big data is a Big Deal\"\n",
+    "print(sakinys.find(\"Data\"))\n",
+    "print(sakinys.rfind(\"data\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21\n",
+      "35\n"
+     ]
+    }
+   ],
+   "source": [
+    "sakinys = \"Data is the new oil. Big data is a Big Deal\"\n",
+    "print(sakinys.find(\"Big\"))\n",
+    "print(sakinys.rfind(\"Big\"))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -665,10 +1026,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A good example sets a good precedent.\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"A bad example sets a bad precedent.\"\n",
+    "new_text = text.replace(\"bad\", \"good\")\n",
+    "print(new_text)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -676,9 +1049,12 @@
    "source": [
     "### `strip()`, `rstrip()`, ir `lstrip()`\n",
     "\n",
-    "Šie metodai grąžina eilutės kopiją, iš kurios pašalina tarpus (whitespace)\n\n",
-    "`strip()`: Šis metodas pašalina visus tarpus (whitespace) iš eilutės pradžios ir pabaigos\n\n",
-    "`rstrip()`: Šis metodas pašalina visus tarpus (whitespace) tik iš eilutės galo (dešinės pusės)\n\n",
+    "Šie metodai grąžina eilutės kopiją, iš kurios pašalina tarpus (whitespace)\n",
+    "\n",
+    "`strip()`: Šis metodas pašalina visus tarpus (whitespace) iš eilutės pradžios ir pabaigos\n",
+    "\n",
+    "`rstrip()`: Šis metodas pašalina visus tarpus (whitespace) tik iš eilutės galo (dešinės pusės)\n",
+    "\n",
     "`lstrip()`: Šis metodas pašalina visus tarpus (whitespace) tik iš eilutės pradžios (kairės pusės)"
    ]
   },
@@ -715,10 +1091,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "| Too much space! |\n",
+      "|      Too much space! |\n",
+      "| Too much space!      |\n"
+     ]
+    }
+   ],
+   "source": [
+    "tekstas =\"     Too much space!     \"\n",
+    "print(\"|\",tekstas.strip(), \"|\") \n",
+    "print(\"|\",tekstas.rstrip(),\"|\")\n",
+    "print(\"|\",tekstas.lstrip(),\"|\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Miskas pilnas grybu *\n"
+     ]
+    }
+   ],
+   "source": [
+    "sakinys = \"    Miskas pilnas grybu    \"\n",
+    "print(\"*\", sakinys.strip(), \"*\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -772,6 +1181,46 @@
     "### Greita užduotis 15\n",
     "\n",
     "Sukurkite sutarties eilutę į f eilutę(f-string), nurodydami dalyką(subject) ir šalis(parties) kaip aukščiau apibrėžtus kintamuosius.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Musu kieme auga senas Azuolas, jam jau 105 metu.\n"
+     ]
+    }
+   ],
+   "source": [
+    "medis = \"Azuolas\"\n",
+    "amzius = 105\n",
+    "formatuota_eilute = f\"Musu kieme auga senas {medis}, jam jau {amzius} metu.\"\n",
+    "print(formatuota_eilute)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pas mus gyvena suo Lucky, jo veisle jorkas.\n"
+     ]
+    }
+   ],
+   "source": [
+    "suo = \"Lucky\"\n",
+    "veisle = \"jorkas\"\n",
+    "formatuotas_sakinys = f\"Pas mus gyvena suo {suo}, jo veisle {veisle}.\"\n",
+    "print(formatuotas_sakinys)"
    ]
   },
   {
@@ -836,10 +1285,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pas mus gyvena Lucky, jo veisle jorkas.\n",
+      "Pas mus gyvena suo, jo veisle jorkas, o vardas Lucky.\n"
+     ]
+    }
+   ],
+   "source": [
+    "formatuotas_sakinys = \"Pas mus gyvena {}, jo veisle {}.\".format(suo, veisle)\n",
+    "print(formatuotas_sakinys)\n",
+    "\n",
+    "formatuotas_sakinys = \"Pas mus gyvena suo, jo veisle {1}, o vardas {0}.\".format(suo, veisle)\n",
+    "print(formatuotas_sakinys)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -865,6 +1329,26 @@
    ],
    "source": [
     "formatuota_eilute = \"Mano vardas yra %s ir man yra %d metu.\" % (vardas, amzius)\n",
+    "print(formatuota_eilute)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Imones saskaitoje Seb banke yra 3550 pinigu.\n"
+     ]
+    }
+   ],
+   "source": [
+    "bankas = \"Seb\"\n",
+    "pinigai = 3550\n",
+    "formatuota_eilute = \"Imones saskaitoje %s banke yra %d pinigu.\" % (bankas, pinigai)\n",
     "print(formatuota_eilute)"
    ]
   },
@@ -991,10 +1475,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "produktas:       kvepalai\n",
+      "kaina:           175.36\n"
+     ]
+    }
+   ],
+   "source": [
+    "produktas = \"kvepalai\"\n",
+    "kaina = 175.36\n",
+    "formatuota_eilute = f\"produktas:{\"kvepalai\":>15}\\nkaina:{kaina:>17,.2f}\"\n",
+    "print(formatuota_eilute)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1084,10 +1582,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Menu:\n",
+      "-chili_sriuba\n",
+      "-pica\n",
+      "-desertas\n",
+      "Aciu!\n"
+     ]
+    }
+   ],
+   "source": [
+    "pirmas_patekalas = \"chili_sriuba\"\n",
+    "antras_patekalas = \"pica\"\n",
+    "trecias_patekalas = \"desertas\"\n",
+    "print(\"Menu:\", end=\"\\n-\") \n",
+    "print(\n",
+    "      pirmas_patekalas,\n",
+    "      antras_patekalas,\n",
+    "      trecias_patekalas,\n",
+    "      sep=\"\\n-\",\n",
+    "      end=\"\\nAciu!\\n\"\n",
+    ")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1139,7 +1661,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.1"
   },
   "orig_nbformat": 4
  },
