--- a/01_programming_basics/0107lt_ivestis.ipynb
+++ b/01_programming_basics/0107lt_ivestis.ipynb
@@ -57,6 +57,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labas, Victoria!\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input(\"Prasome ivesti savo varda: \")\n",
+    "print(f\"Labas, {name}!\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -70,10 +88,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "labas, melyna!\n",
+      "777!\n"
+     ]
+    }
+   ],
+   "source": [
+    "spalva = input(\"Kokia jusu megstama spalva?: \")\n",
+    "print(f\"labas, {spalva}!\")\n",
+    "skaicius = input(\"koks megstamas jusu skaicius?: \")\n",
+    "print(f\"{skaicius}!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mano megstama spalva yra melyna! ir megstamas skaicius yra 777! \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Mano megstama spalva yra {spalva}! ir megstamas skaicius yra {skaicius}! \")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -119,10 +168,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Imones pavadinimas UPS 24 metu\n",
+      "Bet po 6 metu bus svenciamas imones 30 jubiliejus \n"
+     ]
+    }
+   ],
+   "source": [
+    "Imones_pavadinimas = input(\"Koks imones pavadinimas?: \")\n",
+    "imones_amzius = input (\"kiek imonei metu?: \")\n",
+    "print(f\"Imones pavadinimas\", (Imones_pavadinimas), (imones_amzius), \"metu\")\n",
+    "\n",
+    "imones_amzius = input (\"kiek imonei metu?: \")\n",
+    "imones_amzius = int(imones_amzius)\n",
+    "print(f\"Bet po 6 metu bus svenciamas imones {imones_amzius + 6} jubiliejus \")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -197,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.1"
   },
   "orig_nbformat": 4
  },
