--- a/02_loop_list_tuple_set_dictionary/0201lt_sarasai.ipynb
+++ b/02_loop_list_tuple_set_dictionary/0201lt_sarasai.ipynb
@@ -20,9 +20,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['obuolys', 'bananas', 'vyšnia']\n"
+     ]
+    }
+   ],
    "source": [
     "vaisiai = [\"obuolys\", \"bananas\", \"vyšnia\"]\n",
     "print(vaisiai)"
@@ -50,9 +58,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "#Tuščias sąrašas:\n",
     "tuscias_sarasas = []\n",
@@ -61,9 +77,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "#Skaičių sąrašas:\n",
     "skaiciu_sarasas = [1, 2, 3, 4, 5]\n",
@@ -72,9 +96,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['obuolys', 'kriaušė', 'bananas']\n"
+     ]
+    }
+   ],
    "source": [
     "#Žodžių sąrašas:\n",
     "zodziu_sarasas = ['obuolys', 'kriaušė', 'bananas']\n",
@@ -83,9 +115,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['obuolys', 2, 1.4, 'kriaušė', True, 'bananas']\n"
+     ]
+    }
+   ],
    "source": [
     "#Sąrašas su skirtingais dalykais:\n",
     "ivairus_sarasas = ['obuolys', 2, 1.4, 'kriaušė', True, 'bananas']\n",
@@ -94,9 +134,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "#Taip pat galite kurti sąrašą naudodami funkciją list():\n",
     "numbers = list([1, 2, 3, 4, 5])\n",
@@ -112,9 +160,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['h', 'e', 'l', 'l', 'o']\n"
+     ]
+    }
+   ],
    "source": [
     "string_as_list = list(\"hello\")  # Konvertuoja string'ą į sąrašą simbolių\n",
     "print(string_as_list)"
@@ -122,9 +178,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4]\n"
+     ]
+    }
+   ],
    "source": [
     "range_as_list = list(range(5))   # Konvertuoja diapazoną į sąrašą\n",
     "print(range_as_list)"
@@ -173,9 +237,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "obuolys\n",
+      "kriaušė\n",
+      "bananas\n"
+     ]
+    }
+   ],
    "source": [
     "vaisiai = ['obuolys', 'kriaušė', 'bananas']\n",
     "\n",
@@ -198,9 +272,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bananas\n",
+      "kriaušė\n",
+      "obuolys\n"
+     ]
+    }
+   ],
    "source": [
     "print(vaisiai[-1])  # Šis komentaras atspausdins 'bananas'\n",
     "\n",
@@ -259,9 +343,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['obuolys', 'kriaušė', 'bananas']\n",
+      "['bananas', 'apelsinas', 'lotosas']\n",
+      "['kriaušė', 'bananas', 'apelsinas']\n",
+      "['bananas', 'apelsinas', 'lotosas']\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. Jei turite tokį vaisių sąrašą:\n",
     "vaisiai = ['obuolys', 'kriaušė', 'bananas', 'apelsinas', 'lotosas']\n",
@@ -289,9 +384,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['obuolys', 'bananas', 'lotosas']\n"
+     ]
+    }
+   ],
    "source": [
     "vaisiai = ['obuolys', 'kriaušė', 'bananas', 'apelsinas', 'lotosas']\n",
     "\n",
@@ -321,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,9 +440,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['obuolys', 'avokadas', 'bananas']\n"
+     ]
+    }
+   ],
    "source": [
     "vaisiai[1] = 'avokadas'\n",
     "print(vaisiai)  # Tai atspausdins ['obuolys', 'avokadas', 'bananas']\n"
@@ -360,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,9 +489,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['obuolys', 'ananasas', 'mangas', 'lotosas']\n"
+     ]
+    }
+   ],
    "source": [
     "vaisiai[1:4] = ['ananasas', 'mangas']\n",
     "print(vaisiai)  # Tai atspausdins ['obuolys', 'ananasas', 'mangas', 'lotosas']\n"
@@ -440,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +927,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
