--- a/02_loop_list_tuple_set_dictionary/0203lt_ciklas_for.ipynb
+++ b/02_loop_list_tuple_set_dictionary/0203lt_ciklas_for.ipynb
@@ -19,9 +19,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "skaičiai = [1, 2, 3, 4, 5]\n",
     "\n",
@@ -49,11 +61,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "skaiciai = [ 1, 2, 3, 4, 5 ]\n",
+    "\n",
+    "for skaicius in skaiciai:\n",
+    "    print(skaicius)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kriause\n",
+      "mandarinas\n",
+      "bananas\n",
+      "greifruktas\n",
+      "apelsinas\n"
+     ]
+    }
+   ],
+   "source": [
+    "vaisiai = [ \"kriause\", \"mandarinas\", \"bananas\", \"greifruktas\", \"apelsinas\" ]\n",
+    "\n",
+    "for vaisius in vaisiai:\n",
+    "    print(vaisius)"
    ]
   },
   {
@@ -70,14 +122,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rokas\n",
+      "Andrius\n",
+      "Laura\n"
+     ]
+    }
+   ],
    "source": [
     "amžius = {'Rokas': 20, 'Andrius': 34, 'Laura': 25}\n",
     "\n",
     "for i in amžius:\n",
     "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Domas\n",
+      "Juste\n",
+      "Ula\n"
+     ]
+    }
+   ],
+   "source": [
+    "zmones = {\"Domas\": 23, \"Juste\": 20, \"Ula\": 13}\n",
+    "\n",
+    "for zmogus in zmones:\n",
+    "    print(zmogus)"
    ]
   },
   {
@@ -91,14 +175,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n",
+      "34\n",
+      "25\n"
+     ]
+    }
+   ],
    "source": [
     "amžius = {'Rokas': 20, 'Andrius': 34, 'Laura': 25}\n",
     "\n",
     "for i in amžius.values():\n",
     "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n",
+      "20\n",
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "zmones = {\"Domas\": 23, \"Juste\": 20, \"Ula\": 13}\n",
+    "\n",
+    "for zmogus in zmones.values():\n",
+    "    print(zmogus)\n"
    ]
   },
   {
@@ -112,14 +228,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rokas 20\n",
+      "Andrius 34\n",
+      "Laura 25\n"
+     ]
+    }
+   ],
    "source": [
     "amžius = {'Rokas': 20, 'Andrius': 34, 'Laura': 25}\n",
     "\n",
     "for raktas, vertė in amžius.items():\n",
     "    print(raktas, vertė)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Domas 23\n",
+      "Juste 20\n",
+      "Ula 13\n"
+     ]
+    }
+   ],
+   "source": [
+    "zmones = {\"Domas\": 23, \"Juste\": 20, \"Ula\": 13}\n",
+    "\n",
+    "for zmogus, amzius in zmones.items():\n",
+    "    print(zmogus, amzius)"
    ]
   },
   {
@@ -158,9 +306,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "for skaicius in range(1, 6):\n",
     "    print(skaicius)"
@@ -298,7 +458,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "\n"
    ]
   },
   {
@@ -352,9 +513,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "žalia ąžuolas yra gražus\n",
+      "žalia beržas yra gražus\n",
+      "žalia liepa yra gražus\n",
+      "geltona ąžuolas yra gražus\n",
+      "geltona beržas yra gražus\n",
+      "geltona liepa yra gražus\n",
+      "raudona ąžuolas yra gražus\n",
+      "raudona beržas yra gražus\n",
+      "raudona liepa yra gražus\n"
+     ]
+    }
+   ],
    "source": [
     "spalvos = ['žalia', 'geltona', 'raudona']\n",
     "medžiai = ['ąžuolas', 'beržas', 'liepa']\n",
@@ -392,15 +569,6 @@
    "source": [
     "1. Sukurkite įterptinį `for` ciklą, kuris atspausdintų mokinio vardą ir dalykus su pažymiais."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# jusu kodo vieta"
-   ]
   }
  ],
  "metadata": {
@@ -419,7 +587,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
