Užduočių koregavimas 0203lt

--- a/02_loop_list_tuple_set_dictionary/0203lt_ciklas_for.ipynb
+++ b/02_loop_list_tuple_set_dictionary/0203lt_ciklas_for.ipynb
@@ -202,6 +202,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "3\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "vaisiai = {\"bananas\": 5, \"apelsinas\": 3, \"mandarinas\": 10 }\n",
+    "\n",
+    "for vaisio_kiekis in vaisiai.values():\n",
+    "    print(vaisio_kiekis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bananas\n",
+      "apelsinas\n",
+      "mandarinas\n"
+     ]
+    }
+   ],
+   "source": [
+    "vaisiai = {\"bananas\": 5, \"apelsinas\": 3, \"mandarinas\": 10 }\n",
+    "\n",
+    "for vaisis in vaisiai:\n",
+    "    print(vaisis)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -255,10 +299,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bananas 5\n",
+      "vaisiai 18 bendras kiekis\n",
+      "apelsinas 3\n",
+      "vaisiai 18 bendras kiekis\n",
+      "mandarinas 10\n",
+      "vaisiai 18 bendras kiekis\n"
+     ]
+    }
+   ],
+   "source": [
+    "vaisiai = {\"bananas\": 5, \"apelsinas\": 3, \"mandarinas\": 10 }\n",
+    "\n",
+    "for vaisius, kiekis in vaisiai.items():\n",
+    "    print(vaisius, kiekis )\n",
+    "    print(f\"vaisiai\", (5 + 3 + 10),\"bendras kiekis\")\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -333,10 +397,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mango 7\n",
+      "arbuzas 3\n",
+      "greifruktas 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "vaisiai = {\"mango\": 7, \"arbuzas\": 3, \"greifruktas\": 5}\n",
+    "for vaisius, kiekis, in vaisiai.items():\n",
+    "   print(vaisius,kiekis)\n",
+    "\n",
+    "  "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -780,11 +860,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'mokinio_pazymiai' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# jusu kodo vieta\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m \u001b[43mmokinio_pazymiai\u001b[49m:\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m subject \u001b[38;5;129;01min\u001b[39;00m mokinio_pazymiai\u001b[38;5;241m.\u001b[39mitems():\n\u001b[0;32m      4\u001b[0m         \u001b[38;5;28mprint\u001b[39m(name, subject)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'mokinio_pazymiai' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# jusu kodo vieta"
+    "# jusu kodo vieta\n",
+    "for name in mokinio_pazymiai:\n",
+    "    for subject in mokinio_pazymiai.items():\n",
+    "        print(name, subject)"
    ]
   },
   {
